--- a/src/components/SelectedFilm/MobileSwitcher/MobileSwitcher.scss
+++ b/src/components/SelectedFilm/MobileSwitcher/MobileSwitcher.scss
@@ -34,7 +34,7 @@
 
     &__film {
       transform: rotateY(180deg);
-      transition: all 0.5s ease-in;
+      transition: all 0.2s ease-in;
 
       &--animate {
         transform: rotateY(0);
@@ -43,7 +43,7 @@
 
     &__comment {
       transform: rotateY(180deg);
-      transition: all 0.5s ease-in;
+      transition: all 0.2s ease-in;
 
       &--animate {
         transform: rotateY(0);
